# ascent

./: CHANGELOG.md  azure-pipelines.yml
.github/workflows/: build_ascent_gcc.yml  build_ascent_hip.yml  build_ascent_icc.yml
scripts/build_ascent/: 2025_02_14_zfp_python_build_hardening.patch  build_ascent.sh  build_ascent_aurora.sh  build_ascent_openmp_rzhound.sh
scripts/ci/docker/alpinedav_ubuntu_20.04_rocm_6.3.0_devel/: Dockerfile  build.sh
scripts/gactemu/: gactemu-config.yaml
src/config/: ascent_config.mk.in  dray_config.mk.in
src/docs/sphinx/: Publications.rst  Utilities.rst
src/docs/sphinx/Actions/: Actions.rst  Examples.rst  (+4 more)
src/libs/: CMakeLists.txt
src/libs/ascent/: CMakeLists.txt  ascent.cpp  ascent.hpp
src/libs/logging/: CMakeLists.txt  ascent_annotations.cpp  ascent_annotations.hpp  ascent_logging.cpp  ascent_logging.hpp  ascent_logging_config.h.in  ascent_logging_exports.h  ascent_logging_timer.cpp  ascent_logging_timer.hpp
src/libs/vtkh/: DataSet.cpp  DataSet.hpp
src/tests/: CMakeLists.txt
src/tests/_test_data/: bentgrid_2d_visitghost_yaml.root  bentgrid_3d_visitghost_yaml.root
src/tests/ascent/: CMakeLists.txt  t_ascent_ascent_runtime.cpp  t_ascent_cinema_a.cpp  t_ascent_dray.cpp  t_ascent_external_surfaces.cpp  t_ascent_logging.cpp  t_ascent_mpi_add_domain_ids.cpp  t_ascent_mpi_add_ranks.cpp  t_ascent_mpi_ascent_runtime.cpp  t_ascent_mpi_partition.cpp  t_ascent_partition.cpp  t_ascent_render_2d.cpp  t_ascent_render_3d.cpp  t_ascent_scalar_renderer.cpp
src/tests/logging/: CMakeLists.txt  t_ascent_logger_basic.cpp
src/tests/utilities/: batlow.ct  t_python_visit_session_converters.py
src/tests/vtkh/: CMakeLists.txt  t_vtk-h_external_surfaces.cpp  t_vtk-h_scalar_renderer_par.cpp
src/utilities/replay/: replay.cpp
src/utilities/visit_session_converters/: visit_color_table_to_ascent_color_table.py
(+38 files in other folders)
